@@ -1,7 +1,7 @@
 plotRings <- function(year, trwN, trwS = NA_real_,
-                      trwE = NA_real_, trwW = NA_real_, 
+                      trwE = NA_real_, trwW = NA_real_,
+                      length.unit = "mm",
                       animation = FALSE, 
-                      length.unit = "100 mm",
                       sys.sleep = 0.2, 
                       year.labels = TRUE, 
                       d2pith = NA,
