@@ -71,17 +71,16 @@
 }
 \examples{library(utils)
 data(ca533)
-t <- as.numeric(row.names(ca533))
+tm <- time(ca533)
 x <- ca533[[1]]
 idx <- which(!is.na(x))
-redf <- redfit(x[idx], t[idx], "time",
+redf <- redfit(x[idx], tm[idx], "time",
                nsim = 100, iwin = 0, ofac = 1, n50 = 1)
 print(redf)
 fname <- tempfile(fileext=".csv")
 print(fname) # tempfile used for output
 print(redf, csv.out = TRUE, file = fname)
 redftable <- read.csv(fname)
-
 unlink(fname) # remove the file
 }
 \keyword{ print }
